--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,6 +19,8 @@
 
       <dt>8.3</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
+      <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
+      <dd>Updated PAC check to allow "file:" (#49)</dd>
 
 
       <dt>8.2</dt>
