--- a/src/content/help.html
+++ b/src/content/help.html
@@ -53,6 +53,7 @@
 
     <h2>Non-Destructive Editing</h2>
     <p>Editing & importing are non-destructive. <b>Save</b> must be clicked to apply changes.</p>
+    <p>See also: <a href="https://github.com/foxyproxy/browser-extension/issues/25" target="_blank">Destructive vs Nondestructive Editing</a></p>
 
     <h2>Proxy Authentication</h2>
     <ul>
@@ -108,6 +109,7 @@
       <dt>Proxy by Patterns</dt>
       <dd>Connections are proxied based on patterns</dd>
       <dd>If there are no patterns that match the URL being loaded, connections are made without a proxy</dd>
+      <dd>Patterns are not applicable in PAC type</dd>
 
       <dt>Disable or Direct</dt>
       <dd>Normal proxying is set to system and handled by the browser</dd>
@@ -458,7 +460,9 @@
 
       <dt>PAC URL <span>(not available on Android)</span></dt>
       <dd>Required for PAC type</dd>
+      <dd>Proxy Auto-Configuration file (PAC) can be used to handle all proxying configurations</dd>
       <dd>Patterns are not applicable in PAC type</dd>
+      <dd>See also: <a href="https://developer.mozilla.org/docs/Web/HTTP/Proxy_servers_and_tunneling/Proxy_Auto-Configuration_PAC_file" target="_blank">Proxy Auto-Configuration (PAC) file</a></dd>
 
     </dl>
 
