--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,8 +19,12 @@
 
       <dt>8.3</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
+      <dd>Added Internal PAC feature</dd>
+      <dd>Added PAC view feature</dd>
+      <dd>Fixed an issue with empty Global exclude</dd>
       <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
+      <dd>Updated user interface to disable inapplicable options in proxies</dd>
 
 
       <dt>8.2</dt>
