--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,7 +19,7 @@
 
       <dt>8.3</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
-      <dd>Added locally stored PAC feature</dd>
+      <dd>Added locally stored PAC feature (#46) (experimental)</dd>
       <dd>Added PAC view feature</dd>
       <dd>Fixed an issue with empty Global Exclude</dd>
       <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
