--- a/src/content/help.html
+++ b/src/content/help.html
@@ -465,7 +465,7 @@
       <dd>Patterns are not applicable in PAC type</dd>
       <dd>See also: <a href="https://developer.mozilla.org/docs/Web/HTTP/Proxy_servers_and_tunneling/Proxy_Auto-Configuration_PAC_file" target="_blank">Proxy Auto-Configuration (PAC) file</a></dd>
 
-      <dt id="store-locally">Store Locally</dt>
+      <dt id="store-locally" class="experimental">Store Locally</dt>
       <dd>Option to store PAC locally</dd>
       <dd>Option should only be used for altering remote PAC rules</dd>
       <dd>Storing large or many PACs locally is not recommended and can prevent browser sync</dd>
