--- a/src/content/about.html
+++ b/src/content/about.html
@@ -22,6 +22,7 @@
       <dd>Added locally stored PAC feature (#46) (experimental)</dd>
       <dd>Added PAC view feature</dd>
       <dd>Fixed an issue with empty Global Exclude</dd>
+      <dd>Fixed an issue with upgrade sync data on Firefox (#53)</dd>
       <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
       <dd>Updated user interface to disable inapplicable options in proxies</dd>
@@ -29,7 +30,7 @@
 
       <dt>8.2</dt>
       <dd>Added option to set the country to blank</dd>
-      <dd>Fixed an issue with sync (#45)</dd>
+      <dd>Fixed an issue with upgrade sync data on Chrome (#45)</dd>
       <dd>Updated Incognito process on Chrome</dd>
 
       <dt>8.1</dt>
