--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,11 @@
 
     <h1 id="changelog">Changelog</h1>
     <dl>
+      <dt>8.4</dt>
+      <dd>Added light/dark theme detection for badge background color (#61)</dd>
+      <dd>Enabled to run with "controlled_by_other_extensions" on Firefox (#68)</dd>
+      <dd>Removed localhost & local network passthrough in Firefox (#50, #63, #64, #66, #71)</dd>
+      <dd>Updated Options save process to fill blank proxy header title display (#74)</dd>
 
       <dt>8.3</dt>
       <dd>Added enterprise policy & managed storage feature (#42) (experimental)</dd>
@@ -26,7 +31,6 @@
       <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
       <dd>Updated user interface to disable inapplicable options in proxies</dd>
-
 
       <dt>8.2</dt>
       <dd>Added option to set the country to blank</dd>
