--- a/src/content/help.html
+++ b/src/content/help.html
@@ -283,14 +283,14 @@
           <th>Proxy by Patterns</th>
           <td>browser</td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
-          <td><mark>FoxyProxy</mark></td>
+          <td><mark><s>FoxyProxy</s></mark></td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
         </tr>
         <tr>
           <th>Single Proxy</th>
           <td>browser</td>
           <td>browser<br><i>scheme, host, wildcard, CIDR</i></td>
-          <td><mark>FoxyProxy</mark></td>
+          <td><mark><s>FoxyProxy</s></mark></td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
         </tr>
         <tr>
@@ -304,21 +304,21 @@
           <th>Incognito</th>
           <td>browser</td>
           <td>browser<br><i>scheme, host, wildcard, CIDR</i></td>
-          <td><mark>FoxyProxy</mark></td>
+          <td><mark><s>FoxyProxy</s></mark></td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
         </tr>
         <tr>
           <th>Container</th>
           <td>n/a</td>
           <td>n/a</td>
-          <td><mark>FoxyProxy</mark></td>
+          <td><mark><s>FoxyProxy</s></mark></td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
         </tr>
         <tr>
           <th>Tab Proxy</th>
           <td>n/a</td>
           <td>n/a</td>
-          <td><mark>FoxyProxy</mark></td>
+          <td><mark><s>FoxyProxy</s></mark></td>
           <td><mark>FoxyProxy</mark><br><i>scheme, host, wildcard, CIDR (IPv4)</i></td>
         </tr>
       </tbody>
