--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -29,7 +29,7 @@
         <div class="host">
           <input type="text" id="filter" spellcheck="false" placeholder="filter">
 
-          <select>
+          <select class="local">
             <option value="" disabled selected>&nbsp;</option>
           </select>
 
