--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,15 @@
 
     <h1 id="changelog">Changelog</h1>
     <dl>
+
+      <dt>8.6</dt>
+      <dd>Fixed an issue with migrating database from older versions (#69)</dd>
+      <dd>Updated user interface to disable inapplicable options in proxies (#52)</dd>
+      <dd>Updated wildcard to regular expression conversion (#72)</dd>
+
+      <dt>8.5</dt>
+      <dd>Skipped</dd>
+
       <dt>8.4</dt>
       <dd>Added light/dark theme detection for badge background color (#61)</dd>
       <dd>Enabled to run with "controlled_by_other_extensions" on Firefox (#68)</dd>
