--- a/src/content/help.html
+++ b/src/content/help.html
@@ -201,7 +201,7 @@
 
 
     <h2>Proxy DNS <span>(Firefox only)</span></h2>
-    <p>Option to pass DNS to the SOCKS proxy when using SOCKS v5</p>
+    <p>Option to pass DNS to the SOCKS proxy when using SOCKS</p>
 
     <h2>Limit WebRTC <span>(requires "privacy" permission)</span></h2>
     <p>Toggle <a href="https://developer.mozilla.org/docs/Web/API/WebRTC_API" target="_blank">WebRTC</a> browser settings as it has been known to leak real IP</p>
