--- a/src/content/about.html
+++ b/src/content/about.html
@@ -20,6 +20,7 @@
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Fixed somme issue on Firefox for Android (#60)</dd>
       <dd>Updated wildcard to regular expression conversion (#72)</dd>
+      <dd>Updated default Firefox proxy setting (#59)</dd>
 
       <dt>8.6</dt>
       <dd>Fixed an issue with migrating database from older versions (#69)</dd>
