--- a/src/content/about.html
+++ b/src/content/about.html
@@ -19,8 +19,11 @@
       <dt>8.7</dt>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Fixed somme issue on Firefox for Android (#60)</dd>
-      <dd>Updated wildcard to regular expression conversion (#72)</dd>
+      <dd>Removed Help document display on install/upgrade (#86)</dd>
       <dd>Updated default Firefox proxy setting (#59)</dd>
+      <dd>Updated PAC check to allow "file:" (#49)</dd>
+      <dd>Updated pattern "Add" button text due to localisation issues (#88)</dd>
+      <dd>Updated wildcard to regular expression conversion (#72)</dd>
 
       <dt>8.6</dt>
       <dd>Fixed an issue with migrating database from older versions (#69)</dd>
@@ -100,6 +103,7 @@
       <dd>es: <a href="https://github.com/LuisAlfredo92" target="_blank">Luis Alfredo Figueroa Bracamontes</a></dd>
       <dd>fa: <a href="https://github.com/axone13" target="_blank">Matin Kargar </a></dd>
       <dd>fr: <a href="https://github.com/Hugo-C" target="_blank">Hugo-C</a></dd>
+      <dd>ja_JP:  <a href="https://github.com/yutayamate" target="_blank">Yuta Yamate</a></dd>
       <dd>pl: Grzegorz Koryga</dd>
       <dd>pt_BR: </dd>
       <dd>ru: <a href="https://github.com/sosiska" target="_blank">Kirill Motkov</a></dd>
