--- a/src/content/options.html
+++ b/src/content/options.html
@@ -150,7 +150,7 @@
           <button type="button" class="flat" data-i18n="getLocation"></button>
         </div>
 
-        <div class="proxyDiv"></div>
+        <div class="proxy-div"></div>
 
         <button type="submit" data-i18n="saveOptions"></button>
       </fieldset>
@@ -486,7 +486,7 @@
               <span data-i18n="pattern"></span>
               <label class="plain" data-i18n="import|title"><input type="file" accept=".json">📥</label>
               <button type="button" class="plain" data-i18n="export|title">📤</button>
-              <button type="button" class="flat" data-i18n="add"></button>
+              <button type="button" class="flat" data-i18n="add|title"><span class="plus">➕</span></button>
             </div>
 
             <div class="pattern-box"></div>
