--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,8 +17,12 @@
     <h1 id="changelog">Changelog</h1>
     <dl>
       <dt>8.7</dt>
+      <dd>Added Help translate form</dd>
+      <dd>Added option to proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
+      <dd>Changed the global Proxy DNS to per-proxy setting (#75)</dd>
       <dd>Fixed somme issue on Firefox for Android (#60)</dd>
+      <dd>Increased the maximum height of pattern rows before scrolling</dd>
       <dd>Removed Help document display on install/upgrade (#86)</dd>
       <dd>Updated default Firefox proxy setting (#59)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
