--- a/src/content/about.html
+++ b/src/content/about.html
@@ -21,7 +21,7 @@
       <dd>Added option to proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Changed the global Proxy DNS to per-proxy setting (#75)</dd>
-      <dd>Fixed somme issue on Firefox for Android (#60)</dd>
+      <dd>Fixed Firefox for Android compatibility (#60)</dd>
       <dd>Increased the maximum height of pattern rows before scrolling</dd>
       <dd>Removed Help document display on install/upgrade (#86)</dd>
       <dd>Updated default Firefox proxy setting (#59)</dd>
