--- a/src/content/about.html
+++ b/src/content/about.html
@@ -18,6 +18,7 @@
     <dl>
       <dt>8.7</dt>
       <dd>Added Help translate form</dd>
+      <dd>Added matching pattern to the Log display (#91)</dd>
       <dd>Added option to proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Changed the global Proxy DNS to per-proxy setting (#75)</dd>
