--- a/src/content/options.html
+++ b/src/content/options.html
@@ -611,6 +611,7 @@
             <th style="width: 3em;" data-i18n="type"></th>
             <th data-i18n="hostname"></th>
             <th style="width: 3em;" data-i18n="port"></th>
+            <th data-i18n="pattern"></th>
            </tr>
         </thead>
         <tbody>
@@ -623,6 +624,7 @@
       <!-- template -->
       <template>
         <tr>
+          <td></td>
           <td></td>
           <td></td>
           <td></td>
