--- a/src/content/help.html
+++ b/src/content/help.html
@@ -482,7 +482,7 @@
 
 
     <h2>Show Pattern Proxy <span>(Firefox only)</span></h2>
-    <p>Show proxies on the toolbar badge when in Proxy by Patterns mode</p>
+    <p>Show per-tab proxies on the toolbar badge when in Proxy by Patterns mode</p>
 
 
     <h2>Limit WebRTC <span>(requires "privacy" permission)</span></h2>
