--- a/src/content/about.html
+++ b/src/content/about.html
@@ -17,17 +17,20 @@
     <h1 id="changelog">Changelog</h1>
     <dl>
       <dt>8.7</dt>
-      <dd>Added Help translate form</dd>
-      <dd>Added matching pattern to the Log display (#91)</dd>
-      <dd>Added option to proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
+      <dd>Added Auto Backup feature</dd>
+      <dd>Added FoxyProxy Basic detection (disabled for now)</dd>
+      <dd>Added Help translation form</dd>
+      <dd>Added option to show proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only) (#57)</dd>
+      <dd>Added pattern matching to the Log display (#91)</dd>
       <dd>Added proxy title to the toolbar icon mouse-over title display (#74)</dd>
       <dd>Changed the global Proxy DNS to per-proxy setting (#75)</dd>
       <dd>Fixed Firefox for Android compatibility (#60)</dd>
-      <dd>Increased the maximum height of pattern rows before scrolling</dd>
+      <dd>Increased the maximum height of the pattern section before scrolling</dd>
       <dd>Removed Help document display on install/upgrade (#86)</dd>
-      <dd>Updated default Firefox proxy setting (#59)</dd>
+      <dd>Updated default Firefox proxy resetting (#59)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
       <dd>Updated pattern "Add" button text due to localisation issues (#88)</dd>
+      <dd>Updated schema.json</dd>
       <dd>Updated wildcard to regular expression conversion (#72)</dd>
 
       <dt>8.6</dt>
