--- a/src/content/options.html
+++ b/src/content/options.html
@@ -64,6 +64,9 @@
         <label class="pointer" data-i18n="enableSync"><input type="checkbox" id="sync"></label>
         <p class="description" data-i18n="enableSyncDescription"></p>
 
+        <label data-i18n="autoBackup"><input type="checkbox" id="autoBackup"></label>
+        <p class="description" data-i18n="autoBackupDescription"></p>
+
         <label data-i18n="limitWebRTC"><input type="checkbox" id="limitWebRTC"></label>
         <p class="description" data-i18n="limitWebRTCDescription"></p>
 
