--- a/src/content/help.html
+++ b/src/content/help.html
@@ -1048,11 +1048,12 @@ http://pac-url.com/etc?type=pac&title=Work PAC&color=663300</pre>
       </li>
     </ul>
 
-    <h4>Default Options <span>(v8.2)</span></h4>
+    <h4>Default Options <span>(v8.7)</span></h4>
 <pre>
 {
   "mode": "disable",          // mandatory: current option, necessary to enable
   "sync": false,              // optional:  not necessary as it will be disabled on managed storage
+  "autoBackup": false,        // optional:  not necessary as save is disabled on managed storage
   "showPatternProxy": false,  // optional:  Show proxies on the toolbar badge when in Proxy by Patterns mode (Firefox only)
   "passthrough": "",          // optional:  Global Exclude
   "container": {},            // optional:  Incognito/Container settings
