--- a/src/content/help.html
+++ b/src/content/help.html
@@ -480,15 +480,17 @@
     <p class="note">There is a discussion to increase the storage sync quota to 1MB.<br>
       See also: <a href="https://github.com/w3c/webextensions/issues/351" target="_blank">Discuss limits applied to storage.local and storage.sync API</a></p>
 
-
-    <h2>Show Pattern Proxy <span>(Firefox only)</span></h2>
-    <p>Show per-tab proxies on the toolbar badge when in Proxy by Patterns mode</p>
+    <h2>Auto Backup</h2>
+    <p>Automatically backup & export settings on save</p>
 
 
     <h2>Limit WebRTC <span>(requires "privacy" permission)</span></h2>
     <p>Toggle <a href="https://developer.mozilla.org/docs/Web/API/WebRTC_API" target="_blank">WebRTC</a> browser settings as it has been known to leak real IP</p>
     <p>Toggle changes the browser preferences and does not require SAVE.</p>
 
+
+    <h2>Show Pattern Proxy <span>(Firefox only)</span></h2>
+    <p>Show per-tab proxies on the toolbar badge when in Proxy by Patterns mode</p>
 
     <h2 class="experimental">Incognito/Container</h2>
     <p>Set a proxy for Incognito (Private Mode) and/or Containers</p>
