--- a/src/content/popup.html
+++ b/src/content/popup.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <article>
-      <section>
+      <section class="show-js">
         <h1 data-i18n="extensionName"><img src="../image/icon.svg" alt=""> </h1>
 
         <div class="list">
-          <label>
+          <label class="pattern">
             <span class="flag"><img src="../image/power.svg" alt=""></span>
             <span class="title" data-i18n="proxyByPatterns"></span>
             <input type="radio" name="server" value="pattern">
