--- a/src/content/about.html
+++ b/src/content/about.html
@@ -16,6 +16,10 @@
 
     <h1 id="changelog">Changelog</h1>
     <dl>
+      <dt>8.8</dt>
+      <dd>Added Show hidden feature</dd>
+      <dd>Updated code to process duplicate hostname:port (#33, #76)</dd>
+
       <dt>8.7</dt>
       <dd>Added Auto Backup feature</dd>
       <dd>Added FoxyProxy Basic detection (disabled for now)</dd>
@@ -53,7 +57,7 @@
       <dd>Added PAC view feature</dd>
       <dd>Fixed an issue with empty Global Exclude</dd>
       <dd>Fixed an issue with upgrade sync data on Firefox (#53)</dd>
-      <dd>Updated hostname check to allow "file:" for Unix domain socket (#47)</dd>
+      <dd>Updated hostname check to allow "file:" for Unix Domain Socket (#47)</dd>
       <dd>Updated PAC check to allow "file:" (#49)</dd>
       <dd>Updated user interface to disable inapplicable options in proxies</dd>
 
