--- a/src/content/options.html
+++ b/src/content/options.html
@@ -142,7 +142,7 @@
     <!-- /user options -->
 
     <!-- proxy -->
-    <section class="proxySection">
+    <section class="proxySection show-js">
 
       <fieldset class="proxySection">
 
@@ -619,7 +619,7 @@
         </thead>
         <tbody>
           <tr>
-            <td class="unavailable" colspan="10" data-i18n="notAvailable"></td>
+            <td class="unavailable" colspan="11" data-i18n="notAvailable"></td>
         </tr>
         </tbody>
       </table>
